--- a/index.html
+++ b/index.html
@@ -9,45 +9,31 @@
 </head>
 
 <body>
-    <section>
-        <h1>Menu</h1>
-        <ul>
-            <li>Home</li>
-            <li>About Me</li>
-            <li>By District</li>
-            <li>By Cuisine</li>
-        </ul>
-    </section>
+    <picture><img src="/images/logo.png" alt="Omnomyum Logo"></picture>
+    <h1>Home</h1>
 
-    <section>
-        <h1>Restaurants by District</h1>
+    <nav>
         <ul>
-            <li>Gangnam</li>
-            <li>Sinsa</li>
-            <li>Jamsil</li>
-            <li>Daechi</li>
-            <li>Apgujeong Rodeo</li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="aboutme.html">About Me</a></li>
+            <li><a href="bycuisine.html">By Cuisine</a></li>
+            <li><a href="bydistrict.html">By District</a></li>
         </ul>
-    </section>
+    </nav>
 
-    <section>
-        <h1>Restaurants by Cuisine</h1>
-        <ul>
-            <li>Italian</li>
-            <li>Korean</li>
-            <li>Japanese</li>
-            <li>Chinese</li>
-            <li>Fusion</li>
-        </ul>
-    </section>
+    <h2>Welcome!</h2>
+    <p>
+        Looking for your next fabulous meal in Seoul?
+        Look up some of the most popular eateries chosen by the locals!
+    </p>
 
-    <section>
-        <h1>About Me</h1>
-        <p>
-            I'm currently a sophomore at Cornell University, majoring in Information Science and minoring in Psychology in the College of Arts and Sciences. I'm a beginner designer and aspire to pursue UX/UI as my career path. I'm from Seoul, South Korea, and college is my first experience in the United States!
-        </p>
-        <!--Source: created by Carrie Kim (myself)-->
-    </section>
+    <picture>
+        <img src="/images/mapofseoul.jpg" alt="overall map of seoul">
+    </picture>
+    <br>
+    <picture>
+        <img src="/images/mapofseoul-smaller.jpg" alt="smaller map of seoul">
+    </picture>
 </body>
 
 </html>
