--- a/bycuisine.html
+++ b/bycuisine.html
@@ -9,8 +9,12 @@
 </head>
 
 <body>
-    <picture><img src="/images/logo.png" alt="Omnomyum Logo"></picture>
-    <h1>By District</h1>
+    <picture>
+        <img src="/images/logo.png" alt="Omnomyum Logo">
+        <!--Source: Original work by Carrie Kim-->
+    </picture>
+
+    <h1>By Cuisine</h1>
 
     <nav>
         <ul>
@@ -33,8 +37,15 @@
                         <li>Districts: Gangnam</li>
                         <li>Location: 10 min walk from Gangnam St. Exit 11</li>
                         <li>Signature Menu: Darak Omurice, Spicy Seafood Rosé Pasta</li>
-                    </ul><br>
-                    <picture><img src="/images/omurice.jpg" alt="omurice"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/xtWHF1x9-->
+                    Source: <cite><a href="https://naver.me/xtWHF1x9">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/omurice.jpg" alt="omurice">
+                    </picture><br>
+                    <!--Source: https://www.esquirekorea.co.kr/eee/hotplace/place/1528-->
+                    Source: <cite> <a href="https://www.esquirekorea.co.kr/eee/hotplace/place/1528">omurice</a></cite>
                 </li>
 
                 <li>
@@ -45,8 +56,15 @@
                         <li>Districts: Gangnam</li>
                         <li>Location: 10 min walk from Gangnam St. Exit 11</li>
                         <li>Signature Menu: Kimchi Fried Rice, Carbonara Pasta</li>
-                    </ul><br>
-                    <picture><img src="/images/kimchifriedrice.jpg" alt="kimchifriedrice"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/xYQTUQY4-->
+                    Source: <cite><a href="https://naver.me/xYQTUQY4">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/kimchifriedrice.jpg" alt="kimchifriedrice">
+                    </picture><br>
+                    <!--Source: https://m.blog.naver.com/zkxmqkek/222385243560-->
+                    Source: <cite> <a href="https://m.blog.naver.com/zkxmqkek/222385243560">kimchi fried rice</a></cite>
                 </li>
 
                 <li>
@@ -57,8 +75,34 @@
                         <li>Districts: Daechi</li>
                         <li>Location: 7 min walk from Hanti St. Exit 2</li>
                         <li>Signature Menu: Vongolé Pasta, Pesce</li>
-                    </ul><br>
-                    <picture><img src="/images/nilli-vongole.jpg" alt="vongole"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/x0ahUbvV-->
+                    Source: <cite><a href="https://naver.me/x0ahUbvV">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/nilli-vongole.jpg" alt="vongole">
+                    </picture><br>
+                    <!--Source: https://sg.trip.com/moments/detail/suwon-14747-16246036?locale=en-SG-->
+                    Source: <cite> <a href="https://sg.trip.com/moments/detail/suwon-14747-16246036?locale=en-SG">vongole</a></cite>
+                </li>
+
+                <li>
+                    <h3>Eulji-Darak Dosan</h3>
+                    <ul>
+                        <li>Cuisine: Italian, Fusion</li>
+                        <li>Pricing: 14,000 ~ 20,000 WON</li>
+                        <li>Districts: Apgujeong Rodeo</li>
+                        <li>Location: 5 min walk from Apgujeong Rodeo St. Exit 6</li>
+                        <li>Signature Menu: Darak Omurice, Spicy Seafood Rosé Pasta</li>
+                    </ul>
+                    <!--Source: https://naver.me/5h3E7Kat-->
+                    Source: <cite><a href="https://naver.me/5h3E7Kat">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/omurice.jpg" alt="omurice">
+                    </picture><br>
+                    <!--Source: https://www.esquirekorea.co.kr/eee/hotplace/place/1528-->
+                    Source: <cite> <a href="https://www.esquirekorea.co.kr/eee/hotplace/place/1528">omurice</a></cite>
                 </li>
             </ul>
         </li>
@@ -74,8 +118,14 @@
                         <li>Districts: Sinsa</li>
                         <li>Location: 10 min walk from Sinsa St. Exit 8</li>
                         <li>Signature Menu: Hot Pot Udon, Cold Soba Noodles</li>
-                    </ul><br>
-                    <picture><img src="/images/hotpotudon.jpg" alt="udon"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/FFvSeY1s-->
+                    Source: <cite><a href="https://naver.me/FFvSeY1s">Restaurant Info</a></cite><br>
+                    <picture>
+                        <img src="/images/hotpotudon.jpg" alt="udon">
+                    </picture><br>
+                    <!--Source: https://m.blog.naver.com/dongni660/222616764808-->
+                    Source: <cite> <a href="https://m.blog.naver.com/dongni660/222616764808">udon</a></cite>
                 </li>
 
                 <li>
@@ -86,8 +136,15 @@
                         <li>Districts: Gangnam</li>
                         <li>Location: 7 min walk from Gangnam St. Exit 11</li>
                         <li>Signature Menu: Dakgalbi (roasted chicken) with cheese toppings and ramen noodles</li>
-                    </ul><br>
-                    <picture><img src="/images/dakgalbi.jpg" alt="dakgalbi"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/GbEcUj4Q-->
+                    Source: <cite><a href="https://naver.me/GbEcUj4Q">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/dakgalbi.jpg" alt="dakgalbi">
+                    </picture><br>
+                    <!--Source: https://www.siksinhot.com/P/375109-->
+                    Source: <cite> <a href="https://www.siksinhot.com/P/375109">dakgalbi</a></cite>
                 </li>
 
                 <li>
@@ -98,8 +155,15 @@
                         <li>Districts: Daechi</li>
                         <li>Location: 2 min walk from Hanti St. Exit 2</li>
                         <li>Signature Menu: Cold Noodles, Spicy Cold Noodles</li>
-                    </ul><br>
-                    <picture><img src="/images/spicycoldnoodles.jpg" alt="spicy cold noodles"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/xzc9nEIp-->
+                    Source: <cite><a href="https://naver.me/xzc9nEIp">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/spicycoldnoodles.jpg" alt="spicy cold noodles">
+                    </picture><br>
+                    <!--Source: https://www.123rf.com/photo_106378483_korean-food-collection-photo_spicy-buckwheat-noodles-spicy-cold-noodle-in-stainless-steel-bowl-top-v.html-->
+                    Source: <cite> <a href="https://www.123rf.com/photo_106378483_korean-food-collection-photo_spicy-buckwheat-noodles-spicy-cold-noodle-in-stainless-steel-bowl-top-v.html">cold noodles</a></cite>
                 </li>
 
                 <li>
@@ -110,8 +174,15 @@
                         <li>Districts: Apgujeong Rodeo</li>
                         <li>Location: 7 min walk from Apgujeong Rodeo St. Exit 6</li>
                         <li>Signature Menu: Hot Pot Udon, Cold Soba Noodles</li>
-                    </ul><br>
-                    <picture><img src="/images/hotpotudon.jpg" alt="udon"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/G3J8vtTl-->
+                    Source: <cite><a href="https://naver.me/G3J8vtTl">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/hotpotudon.jpg" alt="udon">
+                    </picture><br>
+                    <!--Source: https://m.blog.naver.com/dongni660/222616764808-->
+                    Source: <cite> <a href="https://m.blog.naver.com/dongni660/222616764808">udon</a></cite>
                 </li>
             </ul>
         </li>
@@ -127,8 +198,15 @@
                         <li>Districts: Jamsil</li>
                         <li>Location: 15 min walk from Jamsil St. Exit 2</li>
                         <li>Signature Menu: Sashimi Set, Hot Fish Cake Soup, Earlgrey Cocktail</li>
-                    </ul><br>
-                    <picture><img src="/images/sashimiset.jpg" alt="sashimi"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/5OnGgyCU-->
+                    Source: <cite><a href="https://naver.me/5OnGgyCU">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/sashimi.jpg" alt="sashimi">
+                    </picture><br>
+                    <!--Source: https://blog.naver.com/postman6666/221132720385-->
+                    Source: <cite> <a href="https://blog.naver.com/postman6666/221132720385">sashimi</a></cite>
                 </li>
 
                 <li>
@@ -139,8 +217,15 @@
                         <li>Districts: Jamsil</li>
                         <li>Location: 7 min walk from Songpanaru St. Exit 9</li>
                         <li>Signature Menu: Oreno Basic Ramen</li>
-                    </ul><br>
-                    <picture><img src="/images/oreno.jpg" alt="oreno ramen"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/GTgSWW6m-->
+                    Source: <cite><a href="https://naver.me/GTgSWW6m">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/oreno.jpg" alt="oreno ramen">
+                    </picture><br>
+                    <!--Source: https://www.tripadvisor.com/Restaurant_Review-g294197-d26232658-Reviews-Oreno_Ramen_Gangnam-Seoul.html-->
+                    Source: <cite> <a href="https://www.tripadvisor.com/Restaurant_Review-g294197-d26232658-Reviews-Oreno_Ramen_Gangnam-Seoul.html">ramen</a></cite>
                 </li>
 
                 <li>
@@ -151,8 +236,15 @@
                         <li>Districts: Apgujeong Rodeo</li>
                         <li>Location: 7 min walk from Apgujeong Rodeo St. Exit 6</li>
                         <li>Signature Menu: Hot Pot Udon, Cold Soba Noodles</li>
-                    </ul><br>
-                    <picture><img src="/images/hotpotudon.jpg" alt="udon"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/G3J8vtTl-->
+                    Source: <cite><a href="https://naver.me/G3J8vtTl">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/hotpotudon.jpg" alt="udon">
+                    </picture><br>
+                    <!--Source: https://m.blog.naver.com/dongni660/222616764808-->
+                    Source: <cite> <a href="https://m.blog.naver.com/dongni660/222616764808">udon</a></cite>
                 </li>
 
                 <li>
@@ -163,8 +255,15 @@
                         <li>Districts: Sinsa</li>
                         <li>Location: 10 min walk from Sinsa St. Exit 8</li>
                         <li>Signature Menu: Hot Pot Udon, Cold Soba Noodles</li>
-                    </ul><br>
-                    <picture><img src="/images/hotpotudon.jpg" alt="udon"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/FFvSeY1s-->
+                    Source: <cite><a href="https://naver.me/FFvSeY1s">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/hotpotudon.jpg" alt="udon">
+                    </picture><br>
+                    <!--Source: https://m.blog.naver.com/dongni660/222616764808-->
+                    Source: <cite> <a href="https://m.blog.naver.com/dongni660/222616764808">udon</a></cite>
                 </li>
             </ul>
         </li>
@@ -180,8 +279,15 @@
                         <li>Districts: Sinsa</li>
                         <li>Location: 5 min walk from Sinsa St. Exit 8</li>
                         <li>Signature Menu: Jjajang Noodles, Jjampong Noodles</li>
-                    </ul><br>
-                    <picture><img src="/images/jjampong.jpg" alt="jjampong"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/FLBKLf8O-->
+                    Source: <cite><a href="https://naver.me/FLBKLf8O">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/jjampong.jpg" alt="jjampong">
+                    </picture><br>
+                    <!--Source: https://amkorinstory.com/1101-->
+                    Source: <cite> <a href="https://amkorinstory.com/1101">jjampong</a></cite>
                 </li>
 
                 <li>
@@ -192,8 +298,15 @@
                         <li>Districts: Daechi</li>
                         <li>Location: 5 min walk from Daechi St. Exit 4</li>
                         <li>Signature Menu: Jjajang Noodles, Jjampong Noodles</li>
-                    </ul><br>
-                    <picture><img src="/images/jjampong.jpg" alt="jjampong"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/Gulz9ueB-->
+                    Source: <cite><a href="https://naver.me/Gulz9ueB">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/jjajang.jpg" alt="jjajang">
+                    </picture><br>
+                    <!--Source: https://emmaru.com/matzip/matzip.do?code=M171210131410346771N-->
+                    Source: <cite> <a href="https://emmaru.com/matzip/matzip.do?code=M171210131410346771N">jjajang</a></cite>
                 </li>
             </ul>
         </li>
@@ -209,8 +322,15 @@
                         <li>Districts: Apgujeong Rodeo</li>
                         <li>Location: 5 min walk from Apgujeong Rodeo St. Exit 6</li>
                         <li>Signature Menu: Darak Omurice, Spicy Seafood Rosé Pasta</li>
-                    </ul><br>
-                    <picture><img src="/images/omurice.jpg" alt="omurice"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/5h3E7Kat-->
+                    Source: <cite><a href="https://naver.me/5h3E7Kat">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/omurice.jpg" alt="omurice">
+                    </picture><br>
+                    <!--Source: https://www.esquirekorea.co.kr/eee/hotplace/place/1528-->
+                    Source: <cite> <a href="https://www.esquirekorea.co.kr/eee/hotplace/place/1528">omurice</a></cite>
                 </li>
 
                 <li>
@@ -221,8 +341,15 @@
                         <li>Districts: Gangnam</li>
                         <li>Location: 10 min walk from Gangnam St. Exit 11</li>
                         <li>Signature Menu: Darak Omurice, Spicy Seafood Rosé Pasta</li>
-                    </ul><br>
-                    <picture><img src="/images/omurice.jpg" alt="omurice"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/xtWHF1x9-->
+                    Source: <cite><a href="https://naver.me/xtWHF1x9">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/omurice.jpg" alt="omurice">
+                    </picture><br>
+                    <!--Source: https://www.esquirekorea.co.kr/eee/hotplace/place/1528-->
+                    Source: <cite> <a href="https://www.esquirekorea.co.kr/eee/hotplace/place/1528">omurice</a></cite>
                 </li>
 
                 <li>
@@ -233,8 +360,15 @@
                         <li>Districts: Gangnam</li>
                         <li>Location: 10 min walk from Gangnam St. Exit 11</li>
                         <li>Signature Menu: Kimchi Fried Rice, Carbonara Pasta</li>
-                    </ul><br>
-                    <picture><img src="/images/kimchifriedrice.jpg" alt="kimchifriedrice"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/xYQTUQY4-->
+                    Source: <cite><a href="https://naver.me/xYQTUQY4">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/kimchifriedrice.jpg" alt="kimchifriedrice">
+                    </picture><br>
+                    <!--Source: https://m.blog.naver.com/zkxmqkek/222385243560-->
+                    Source: <cite> <a href="https://m.blog.naver.com/zkxmqkek/222385243560">kimchi fried rice</a></cite>
                 </li>
 
                 <li>
@@ -245,8 +379,15 @@
                         <li>Districts: Sinsa</li>
                         <li>Location: 8 min walk from Sinsa St. Exit 8</li>
                         <li>Signature Menu: Chicken and Beef Tacos, Shrimp with Fajitas</li>
-                    </ul><br>
-                    <picture><img src="/images/gamsungtaco.jpg" alt="tacos"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/5iz06ZOI-->
+                    Source: <cite><a href="https://naver.me/5iz06ZOI">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/gamsungtaco.jpg" alt="tacos">
+                    </picture><br>
+                    <!--Source: https://chordq0539.tistory.com/738-->
+                    Source: <cite> <a href="https://chordq0539.tistory.com/738">tacos</a></cite>
                 </li>
 
                 <li>
@@ -257,8 +398,15 @@
                         <li>Districts: Daechi</li>
                         <li>Location: 2 min walk from Hanti St. Exit 2</li>
                         <li>Signature Menu: Egg Cheese Garlic Hambageu (minced beef steak)</li>
-                    </ul><br>
-                    <picture><img src="/images/fukuoka.jpg" alt="hambageu"></picture>
+                    </ul>
+                    <!--Source: https://naver.me/FXZKJkPw-->
+                    Source: <cite><a href="https://naver.me/FXZKJkPw">Restaurant Info</a></cite>
+                    <br>
+                    <picture>
+                        <img src="/images/fukuoka.jpg" alt="hambageu">
+                    </picture><br>
+                    <!--Source: http://m.menupan.com/restaurant/onepage.asp?acode=J104085-->
+                    Source: <cite> <a href="http://m.menupan.com/restaurant/onepage.asp?acode=J104085">hambageu</a></cite>
                 </li>
             </ul>
         </li>
