--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <picture><img src="/images/logo.png" alt="Omnomyum Logo"></picture>
+    <picture>
+        <img src="/images/logo.png" alt="Omnomyum Logo">
+        <!--Source: Original work by Carrie Kim-->
+    </picture>
+
     <h1>Home</h1>
 
     <nav>
@@ -25,15 +29,22 @@
     <p>
         Looking for your next fabulous meal in Seoul?
         Look up some of the most popular eateries chosen by the locals!
+        <!--Source: Original work by Carrie Kim-->
     </p>
 
     <picture>
         <img src="/images/mapofseoul.jpg" alt="overall map of seoul">
     </picture>
     <br>
+    <!--Source: https://www.shutterstock.com/image-vector/vector-map-seoul-south-korea-neighbouring-1626702241-->
+    Source: <cite> <a href="https://www.shutterstock.com/image-vector/vector-map-seoul-south-korea-neighbouring-1626702241">seoul-map</a></cite>
+    <br>
     <picture>
         <img src="/images/mapofseoul-smaller.jpg" alt="smaller map of seoul">
     </picture>
+    <br>
+    <!--Source: https://www.shutterstock.com/image-vector/vector-map-seoul-south-korea-neighbouring-1626702241-->
+    Source: <cite> <a href="https://www.shutterstock.com/image-vector/vector-map-seoul-south-korea-neighbouring-1626702241">smaller-seoul-map</a></cite>
 </body>
 
 </html>
