--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <picture><img src="/images/logo.png" alt="Omnomyum Logo"></picture>
+    <picture>
+        <img src="/images/logo.png" alt="Omnomyum Logo">
+        <!--Source: Original work by Carrie Kim-->
+    </picture>
+    
     <h1>About Me</h1>
 
     <nav>
@@ -26,11 +30,13 @@
     <p>
         I'm currently a sophomore at Cornell University, majoring in Information Science and minoring in Psychology in the College of Arts and Sciences. I'm a beginner designer and aspire to pursue UX/UI as my career path. I'm from Seoul, South Korea, and college is my first experience in the United States!
         I enjoy digital art, singing (and recording), reading, and playing Nintendo games with my besties in my free time. I'm not exactly a cook, but I always enjoy a good meal--I do have a knack for finding the yummiest places when I travel, or when I'm back home!
+        <!--Source: Original work by Carrie Kim-->
     </p>
 
     <h2>Inspiration</h2>
 
     <p>
         I was born in Seoul and lived there for around 15 years. Every time I return to Korea over the holidays I make a list of all the special meals I want to revisit and check them off as I go through them. When my friends from the U.S. flew to Korea and made good use of these lists for their trips, it inspired me to share this information in public so that more people can make their taste buds happy at eateries that aren't introduced by tourism sites, but are substantially better than the ones that are!
+        <!--Source: Original work by Carrie Kim-->
     </p>
 </body>
