--- a/bydistrict.html
+++ b/bydistrict.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="stylesheet" type="text/css" href="styles/site.css">
   <title>omnomyum</title>
 </head>
 
@@ -18,7 +19,27 @@
 
     <nav>
         <ul>
+            <li>
+                <picture>
+                <!-- Source: https://www.freepik.com/search?format=search&query=line%20home%20icon&type=icon -->
+                <img alt="" src="images/homepage.png">
+                </picture>
+            </li>
+            <li>
+                Source: <cite> <a href="https://www.freepik.com/search?format=search&query=line%20home%20icon&type=icon">home icon</a></cite>
+            </li>
             <li><a href="index.html">Home</a></li>
+
+            <li>
+                <picture>
+                <!-- Source: https://www.freepik.com/search?format=search&last_filter=query&last_value=line+person+icon&query=line+person+icon&type=icon -->
+                <img alt="" src="images/me.png">
+                </picture>
+            </li>
+            <li>
+                Source: <cite> <a href="https://www.freepik.com/search?format=search&last_filter=query&last_value=line+person+icon&query=line+person+icon&type=icon">person icon</a></cite>
+            </li>
+
             <li><a href="aboutme.html">About Me</a></li>
             <li><a href="bycuisine.html">By Cuisine</a></li>
             <li><a href="bydistrict.html">By District</a></li>
@@ -26,6 +47,7 @@
     </nav>
 
     <ul>
+        <!--Source: Original work by Carrie Kim, Information reference cited below-->
         <li>
             <h2>Gangnam</h2>
             <ul>
